--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "vue-router": "^4.0.11"
   },
   "devDependencies": {
+    "@tailwindcss/line-clamp": "^0.2.1",
     "@types/tailwindcss": "^2.2.1",
     "@vitejs/plugin-vue": "^1.4.0",
     "@vue/compiler-sfc": "^3.2.4",
