--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@tiptap/extension-placeholder": "^2.0.0-beta.28",
     "@tiptap/starter-kit": "^2.0.0-beta.98",
     "@tiptap/vue-3": "^2.0.0-beta.53",
+    "click-outside-vue3": "^4.0.1",
     "dayjs": "^1.10.6",
     "vue": "^3.2.4",
     "vue-debounce": "^3.0.1",
