--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "@tiptap/vue-3": "^2.0.0-beta.56",
     "click-outside-vue3": "^4.0.1",
     "dayjs": "^1.10.6",
+    "throttle-debounce": "^3.0.1",
     "vite-svg-loader": "^2.2.0",
     "vue": "^3.2.7",
-    "vue-debounce": "^3.0.1",
     "vue-next-masonry": "^1.1.3",
     "vue-router": "^4.0.11"
   },
