--- a/package.json
+++ b/package.json
@@ -19,8 +19,8 @@
     "@tiptap/starter-kit": "^2.0.0-beta.101",
     "@tiptap/vue-3": "^2.0.0-beta.56",
     "dayjs": "^1.10.6",
+    "fuse.js": "^6.4.6",
     "throttle-debounce": "^3.0.1",
-    "vite-svg-loader": "^2.2.0",
     "vue": "^3.2.7",
     "vue-next-masonry": "^1.1.3",
     "vue-router": "^4.0.11"
@@ -33,6 +33,7 @@
     "autoprefixer": "^10.3.3",
     "postcss-nested": "^5.0.6",
     "tailwindcss": "^2.2.9",
-    "vite": "^2.5.3"
+    "vite": "^2.5.3",
+    "vite-svg-loader": "^2.2.0"
   }
 }
