--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@tiptap/extension-task-list": "^2.0.0-beta.17",
     "@tiptap/starter-kit": "^2.0.0-beta.101",
     "@tiptap/vue-3": "^2.0.0-beta.56",
+    "click-outside-vue3": "^4.0.1",
     "dayjs": "^1.10.6",
     "fuse.js": "^6.4.6",
     "throttle-debounce": "^3.0.1",
