--- a/package.json
+++ b/package.json
@@ -2,9 +2,9 @@
   "name": "noter",
   "version": "0.0.0",
   "scripts": {
-    "start": "vite --host",
+    "serve": "vite preview",
     "build": "vite build",
-    "serve": "vite preview"
+    "start": "vite --host"
   },
   "dependencies": {
     "@chakra-ui/c-focus-lock": "^0.1.0-alpha.4",
@@ -21,6 +21,7 @@
     "click-outside-vue3": "^4.0.1",
     "dayjs": "^1.10.6",
     "fuse.js": "^6.4.6",
+    "register-service-worker": "^1.7.1",
     "throttle-debounce": "^3.0.1",
     "vue": "^3.2.7",
     "vue-next-masonry": "^1.1.3",
@@ -30,6 +31,7 @@
     "@tailwindcss/line-clamp": "^0.2.1",
     "@types/tailwindcss": "^2.2.1",
     "@vitejs/plugin-vue": "^1.6.0",
+    "@vue/cli-plugin-pwa": "~4.5.0",
     "@vue/compiler-sfc": "^3.2.7",
     "autoprefixer": "^10.3.3",
     "postcss-nested": "^5.0.6",
