--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "postcss-nested": "^5.0.6",
     "tailwindcss": "^2.2.9",
     "vite": "^2.5.3",
+    "vite-plugin-pwa": "^0.11.2",
     "vite-svg-loader": "^2.2.0"
   }
 }
