--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "start": "vite --host"
   },
   "dependencies": {
+    "@chakra-ui/c-focus-lock": "^0.1.0-alpha.4",
     "@headlessui/vue": "^1.4.1",
     "@supabase/supabase-js": "^1.23.0",
     "@tiptap/extension-bullet-list": "^2.0.0-beta.15",
@@ -18,6 +19,7 @@
     "@tiptap/extension-task-list": "^2.0.0-beta.17",
     "@tiptap/starter-kit": "^2.0.0-beta.111",
     "@tiptap/vue-3": "^2.0.0-beta.56",
+    "click-outside-vue3": "^4.0.1",
     "dayjs": "^1.10.7",
     "fuse.js": "^6.4.6",
     "register-service-worker": "^1.7.1",
