--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tiptap/extension-task-list": "^2.0.0-beta.17",
     "@tiptap/starter-kit": "^2.0.0-beta.111",
     "@tiptap/vue-3": "^2.0.0-beta.56",
+    "body-scroll-lock": "^4.0.0-beta.0",
     "click-outside-vue3": "^4.0.1",
     "dayjs": "^1.10.7",
     "fuse.js": "^6.4.6",
