--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@headlessui/vue": "^1.4.1",
     "@supabase/supabase-js": "^1.23.0",
     "@tiptap/extension-bullet-list": "^2.0.0-beta.15",
+    "@tiptap/extension-floating-menu": "^2.0.0-beta.38",
     "@tiptap/extension-link": "^2.0.0-beta.20",
     "@tiptap/extension-list-item": "^2.0.0-beta.14",
     "@tiptap/extension-ordered-list": "^2.0.0-beta.16",
