--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "autoprefixer": "^10.3.3",
     "cypress": "~8.5",
     "postcss-nested": "^5.0.6",
+    "postcss-nested-ancestors": "^2.0.0",
     "tailwindcss": "^2.2.15",
     "typescript": "~4.4",
     "vite": "^2.5.3",
