--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "test": "cypress open",
     "test-components": "cypress open-ct",
     "test:ci": "cypress run --headless",
-    "test:ci-components": "cypress run-ct"
+    "test:ci-components": "cypress run-ct",
+    "generate-supabase-types": "node generateTypes.mjs"
   },
   "dependencies": {
     "@chakra-ui/c-focus-lock": "^0.1.0-alpha.4",
@@ -43,6 +44,8 @@
     "@vue/compiler-sfc": "^3.2.18",
     "autoprefixer": "^10.4.0",
     "cypress": "^9.0.0",
+    "dotenv": "^10.0.0",
+    "openapi-typescript": "^5.0.0",
     "postcss-nested-ancestors": "^2.0.0",
     "tailwindcss": "^3.0.2",
     "typescript": "~4.4",
