--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "@cypress/vite-dev-server": "~2.1",
     "@cypress/vue": "~3.0",
     "@tailwindcss/line-clamp": "^0.3.0",
+    "@types/body-scroll-lock": "^3.1.0",
     "@types/tailwindcss": "^2.2.4",
     "@vitejs/plugin-vue": "^1.6.0",
     "@vue/compiler-sfc": "^3.2.18",
