fix so that '@/bla' does work when the real path is '/bla/index.ts'

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,6 +10,7 @@
     "types": ["vite/client", "cypress"],
     "resolveJsonModule": true,
     "plugins": [{ "name": "@vuedx/typescript-plugin-vue" }],
+    "baseUrl": ".",
     "paths": {
       "@/*": ["./src/*"]
     }
